# organik

./: .gitignore  CMakeLists.txt  CNAME  Direktor.code-workspace  LICENSE-Direktor  LICENSE-LibZHL  LICENSE.md  README.md  build.sh  compile.sh  global_var_siggies.txt  inconsolata-LICENSE.txt  index.css  index.html  installer_linux.sh  installer_powershell.ps1  manifest.json  scripts.csv  setup_cmake.sh  synthetik.strings  the_scripts.raw
Direktor/: .gitignore  CMakeLists.txt  RValueWithFriends.cpp  installer_powershell.ps1  installer_windows.bat  manifest.json  setup_cmake.sh  yygml.zhl
Direktor/include/: GameMaker_Defs.h
Direktor/src/: Action.cpp  Action.h  ConsoleWindow.cpp  ConsoleWindow.h  Globals.cpp  Globals.h  GuiSettingsInline.h  Logging.cpp  Logging.h  RValue.cpp  ScriptHelper.h  SigScan.cpp  SigScan.h  Synthetik.cpp  Synthetik.h  Utils.cpp  Utils.h  Variant.cpp  Variant.h  function_defs  main.cpp  zhl.cpp  zhl.h  zhl_internal.h  zhl_private.h
Direktor/src/Chat/: Chat.cpp  Chat.h  Main.cpp
Direktor/src/DefinitionHelpers/: BuiltinHelper.cpp  BuiltinHelper.h  InstanceHelper.cpp  InstanceHelper.h  ScriptHelper.h  sound_list.h  sprite_list.h
Direktor/src/Hooks/: CInstance.cpp  CRoom.cpp  ChatHooks.cpp  EventHooks.cpp  ScriptHooks.cpp
Direktor/src/Organik/CustomInstances/: ChatBox.h  InstanceClone.h
Direktor/src/Organik/JSON/: Action.cpp  Action.h  CURSED_ORG  Variant.cpp
Direktor/src/Organik/JSON/PRINTING/: variant.json
Direktor/src/Organik/UI/: ChatBox.cpp  ChatTab.cpp  ChatTab.h  GlobalChatTab.cpp  GlobalChatTab.h  ItemFilter.h  MainMenu.cpp  MainMenu.h  PartyChatTab.cpp  PartyChatTab.h  UIManager.cpp  UIManager.h  VariableViewer.cpp  VariableViewer.h
Direktor/src/ZHL_INPUTS/: SYNTHETIK.h
Direktor/src/ZHL_INPUTS/function_defs/: ALL.zhl  CInstance.zhl  Global.zhl
include/: GameMaker_Defs.h  dynasm
include/Arkitekt/: Assembler.h  Assembler.win32.hpp  Compiler.cpp  Compiler.dcpp  Compiler.h  Compiler.win32.cpp  Definition.hpp  Shared.hpp  SigScan.cpp  SigScan.h
include/Aurie/: shared.hpp
include/CallbackManager/: CallbackManagerInterface.h
include/YYToolkit/: YYTK_Shared_Interface.hpp  YYTK_Shared_Types.cpp  YYTK_Shared_Types.hpp
launcher/: CMakeLists.txt  Direktor.lib  build.sh  manifest.json
launcher/src/: ConsoleWindow.cpp  dllmain.cpp
src/: Arkitekt.cpp  Arkitekt.h  CodeEvents.cpp  CodeEvents.h  Events.h  Globals.cpp  Globals.h  HookLock.cpp  InputManager.h  InstanceHelper.cpp  InstanceHelper.h  Logging.cpp  Logging.h  ModuleMain.cpp  ModuleMain.h  PALMemoryProtection.h  RValue.cpp  RValueLock.cpp  ScriptEvents.h  ScriptHelper.h  SigScan.h  Synthetik.h  Synthetik_old.h  Utils.cpp  Utils.h  VariableHelper.h  detours.h  hde.cpp  main.cpp  main.h  obj_fn_list.h  obj_list.h  room_fn_list.h  room_list.h  script_fn_list.h  var_list.h  zhl.cpp  zhl.h  zhl_private.h
src/Base/: Entity.h  Player.h
src/DefinitionHelpers/: InstanceHelper.cpp  InstanceHelper.h  VariableHelper.h  room_list.h  script_list.h  sound_list.h  sprite_list.h  var_list.h
src/Hooks/: CInstance.cpp  CRoom.cpp  ChatHooks.cpp  EventHooks.cpp  Hooks.h  ScriptHooks.cpp
src/Organik/JSON/: Action.cpp  Action.h  JObject.hpp  JSONMod.h  VariableDefHelper.cpp  VariableDefHelper.h  Variant.cpp  Variant.h  Weapon.hpp
src/Organik/UI/: ChatBox.cpp  ChatBox.h  ChatTab.cpp  ChatTab.h  GlobalChatTab.cpp  GlobalChatTab.h  ItemFilter.h  MainMenu.cpp  MainMenu.h  PartyChatTab.cpp  UIManager.cpp  UIManager.h  VariableViewer.cpp  VariableViewer.h
src/UI/: BugReportWindow.cpp  BugReportWindow.h  BuiltinCommands.cpp  BuiltinCommands.h  Button.cpp  Button.h  Command.cpp  Command.h  DevConsole.cpp  DevConsole.h  KeybindConfigWindow.h  MainMenu.cpp  MainMenu.h  OrganikConsole.cpp  OrganikConsole.h  RoomViewer.cpp  RoomViewer.h  TextArea.cpp  TextArea.h  UIElement.h  UIManager.cpp  UIManager.h  VariableViewer.cpp  VariableViewer.h
src/ZHL_INPUTS/function_defs/: CInstance.zhl  CLayer.zhl  Global.zhl  RValue.zhl  YYObjectBase.zhl
